kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-km1
  labels:
    name: test-km1
    environment: production
    managed-by: kubectl
