kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-km1-service
  namespace: test-km1
  labels:
    app: test-km1
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: test-km1
  sessionAffinity: None
